# ai_financial_assitant_0515

./: .gitignore  README.md  analysis.py  gitsteps.txt
.devcontainer/: devcontainer.json
AI_financial_assitant_0515/: .gitignore  README.md  Requirement.txt  app.py  config.py  requirements.txt
AI_financial_assitant_0515/.claude/: settings.local.json
AI_financial_assitant_0515/ai/: orchestrator.py
AI_financial_assitant_0515/database/: connection.py  models.py
AI_financial_assitant_0515/finance/: indicators.py  rules.py
AI_financial_assitant_0515/ingestion/: mapper.py  processor.py
AI_financial_assitant_0515/pages/: alerts_page.py  chat_page.py  dashboard.py  import_page.py
AI_financial_assitant_0515/sample_data/: budget_lines.csv  commitments.csv  mandates.csv  suppliers.csv
AI_financial_assitant_0515/ui/: alerts_page.py  dashboard.py
Upwork compare datasets/mcp-server/: .gitignore  dashboard.html  pyproject.toml  requirements.txt  serve_dashboard.py  streamlit_app.py
