[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.3.0"]
